# notes_bot

./: .env_example  .gitignore  dev_run.py  pyproject.toml  run.py
source/bot/: consts.py  misc.py  states.py
source/bot/handlers/: user.py
source/core/: misc.py  settings.py  setup_logging.py
source/db/: db.py  db_funcs.py  models.py
